// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Layout should render Layout OneColumn 1`] = `
<div
  className="tc-layout theme-layout"
  id={undefined}
>
  <header
    className="tc-layout-header theme-header"
    role="banner"
  >
    <h1>
      Header
    </h1>
  </header>
  <div
    className="tc-layout-one-column theme-main"
  >
    <div
      className="theme-tc-with-drawer"
    >
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "height": "100%",
            "overflow": "auto",
          }
        }
      >
        <h1>
          Column one
        </h1>
      </div>
      <div
        className="theme-tc-with-drawer-container"
      />
    </div>
  </div>
</div>
`;

exports[`Layout should render Layout TwoColumns 1`] = `
<div
  className="tc-layout theme-layout"
  id={undefined}
>
  <header
    className="tc-layout-header theme-header"
    role="banner"
  >
    <h1>
      Header
    </h1>
  </header>
  <div
    className="tc-layout-two-columns theme-container"
  >
    <div
      className="tc-layout-two-columns-left theme-sidemenu"
    >
      <h1>
        Column one
      </h1>
    </div>
    <div
      className="tc-layout-two-columns-main theme-main"
    >
      <div
        className="theme-tc-with-drawer"
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "height": "100%",
              "overflow": "auto",
            }
          }
        >
          <h1>
            Column two
          </h1>
        </div>
        <div
          className="theme-tc-with-drawer-container"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Layout should render layout with Drawer component 1`] = `
<div
  className="tc-layout theme-layout"
  id={undefined}
>
  <header
    className="tc-layout-header theme-header"
    role="banner"
  >
    <h1>
      Header
    </h1>
  </header>
  <div
    className="tc-layout-two-columns theme-container"
  >
    <div
      className="tc-layout-two-columns-left theme-sidemenu"
    >
      <h1>
        Column one
      </h1>
    </div>
    <div
      className="tc-layout-two-columns-main theme-main"
    >
      <div
        className="theme-tc-with-drawer"
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "height": "100%",
              "overflow": "auto",
            }
          }
        >
          <h1>
            Column two
          </h1>
        </div>
        <div
          className="theme-tc-with-drawer-container"
        >
          <div
            className="tc-with-drawer-wrapper"
            onTransitionEnd={[Function]}
            style={
              Object {
                "transform": "translateX(100%)",
              }
            }
          >
            <span
              style={
                Object {
                  "opacity": 0.9,
                }
              }
            />
            <div
              style={
                Object {
                  "width": 500,
                }
              }
              transitioned={false}
            >
              <h1>
                Hello drawers
              </h1>
              <p>
                You should not being able to read this because I'm first
              </p>
            </div>
          </div>
          <div
            className="tc-with-drawer-wrapper"
            onTransitionEnd={[Function]}
            style={
              Object {
                "transform": "translateX(100%)",
              }
            }
          >
            <span
              style={
                Object {
                  "opacity": 0.9,
                }
              }
            />
            <div
              style={
                Object {
                  "width": 400,
                }
              }
              transitioned={false}
            >
              <h1>
                Hello drawers
              </h1>
              <p>
                The content dictate the width
              </p>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Layout should render layout with TabBar component 1`] = `
<div
  className="tc-layout theme-layout"
  id={undefined}
>
  <header
    className="tc-layout-header theme-header"
    role="banner"
  >
    <h1>
      Header
    </h1>
  </header>
  <div
    className="tc-layout-two-columns theme-container"
  >
    <div
      className="tc-layout-two-columns-left theme-sidemenu"
    >
      <h1>
        Column one
      </h1>
    </div>
    <div
      className="tc-layout-two-columns-main theme-main"
    >
      <div
        className="theme-tc-with-drawer"
      >
        <nav
          className="nav tc-tab-bar theme-tc-tab-bar"
        >
          <ul
            className="nav nav-tabs tc-tab-bar-actions"
          >
            <li
              className="tc-tab-bar-action"
            >
              <button
                className="btn btn-link"
                disabled={false}
                id="tab-bar-action-1"
                onClick={[Function]}
                onMouseDown={[Function]}
                role={null}
                type="button"
              >
                <span>
                  Tab1
                </span>
              </button>
            </li>
            <li
              className="tc-tab-bar-action active"
            >
              <button
                className="btn btn-link"
                disabled={false}
                id="tab-bar-action-2"
                onClick={[Function]}
                onMouseDown={[Function]}
                role={null}
                type="button"
              >
                <span>
                  Tab2
                </span>
              </button>
            </li>
            <li
              className="tc-tab-bar-action"
            >
              <button
                className="btn btn-link"
                disabled={false}
                id="tab-bar-action-3"
                onClick={[Function]}
                onMouseDown={[Function]}
                role={null}
                type="button"
              >
                <span>
                  Tab3
                </span>
              </button>
            </li>
          </ul>
        </nav>
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "height": "100%",
              "overflow": "auto",
            }
          }
        >
          <h1>
            Column two
          </h1>
        </div>
        <div
          className="theme-tc-with-drawer-container"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Layout should render layout with footer component 1`] = `
<div
  className="tc-layout theme-layout"
  id={undefined}
>
  <header
    className="tc-layout-header theme-header"
    role="banner"
  >
    <h1>
      Header
    </h1>
  </header>
  <div
    className="tc-layout-one-column theme-main"
  >
    <div
      className="theme-tc-with-drawer"
    >
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "height": "100%",
            "overflow": "auto",
          }
        }
      >
        <h1>
          Column one
        </h1>
      </div>
      <div
        className="theme-tc-with-drawer-container"
      />
    </div>
  </div>
  <footer
    className="tc-layout-footer theme-footer"
    role="contentinfo"
  >
    <h3>
      Footer
    </h3>
  </footer>
</div>
`;

exports[`Layout should render layout with subHeader in OneColumn mode 1`] = `
<div
  className="tc-layout theme-layout"
  id={undefined}
>
  <header
    className="theme-tc-subheader tc-subheader"
  >
    <nav
      className="theme-tc-actionbar-container tc-actionbar-container nav theme-tc-subheader-navbar tc-subheader-navbar"
    >
      <div
        className="theme-tc-subheader-navbar-left"
      >
        <div
          className="theme-navbar-left navbar-left"
        >
          <button
            className="theme-tc-subheader-back-button tc-subheader-back-button btn btn-link"
            disabled={false}
            id="backArrow"
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseOver={[Function]}
            role={null}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="theme-tc-svg-icon tc-svg-icon"
              focusable="false"
              title={null}
            >
              <use
                xlinkHref="#talend-arrow-left"
              />
            </svg>
          </button>
        </div>
        <div
          className="theme-navbar-left navbar-left"
        >
          <div
            className="theme-tc-subheader-details tc-subheader-details"
          >
            <div
              className="theme-tc-subheader-details-text tc-subheader-details-text"
            >
              <div
                className="theme-tc-subheader-details-text-title tc-subheader-details-text-title"
              >
                <h1
                  className="theme-tc-subheader-details-text-title-wording tc-subheader-details-text-title-wording"
                >
                  defaultTitle
                </h1>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
  </header>
  <div
    className="tc-layout-one-column theme-main"
  >
    <div
      className="theme-tc-with-drawer"
    >
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "height": "100%",
            "overflow": "auto",
          }
        }
      >
        <h1>
          Column one
        </h1>
      </div>
      <div
        className="theme-tc-with-drawer-container"
      />
    </div>
  </div>
</div>
`;

exports[`Layout should render layout with subHeader in TwoColumns mode 1`] = `
<div
  className="tc-layout theme-layout"
  id={undefined}
>
  <header
    className="theme-tc-subheader tc-subheader"
  >
    <nav
      className="theme-tc-actionbar-container tc-actionbar-container nav theme-tc-subheader-navbar tc-subheader-navbar"
    >
      <div
        className="theme-tc-subheader-navbar-left"
      >
        <div
          className="theme-navbar-left navbar-left"
        >
          <button
            className="theme-tc-subheader-back-button tc-subheader-back-button btn btn-link"
            disabled={false}
            id="backArrow"
            onClick={[Function]}
            onFocus={[Function]}
            onMouseDown={[Function]}
            onMouseOver={[Function]}
            role={null}
            type="button"
          >
            <svg
              aria-hidden="true"
              className="theme-tc-svg-icon tc-svg-icon"
              focusable="false"
              title={null}
            >
              <use
                xlinkHref="#talend-arrow-left"
              />
            </svg>
          </button>
        </div>
        <div
          className="theme-navbar-left navbar-left"
        >
          <div
            className="theme-tc-subheader-details tc-subheader-details"
          >
            <div
              className="theme-tc-subheader-details-text tc-subheader-details-text"
            >
              <div
                className="theme-tc-subheader-details-text-title tc-subheader-details-text-title"
              >
                <h1
                  className="theme-tc-subheader-details-text-title-wording tc-subheader-details-text-title-wording"
                >
                  defaultTitle
                </h1>
              </div>
            </div>
          </div>
        </div>
      </div>
    </nav>
  </header>
  <div
    className="tc-layout-two-columns theme-container"
  >
    <div
      className="tc-layout-two-columns-left theme-sidemenu"
    />
    <div
      className="tc-layout-two-columns-main theme-main"
    >
      <div
        className="theme-tc-with-drawer"
      >
        <div
          style={
            Object {
              "display": "flex",
              "flexDirection": "column",
              "height": "100%",
              "overflow": "auto",
            }
          }
        >
          <h1>
            Column one
          </h1>
        </div>
        <div
          className="theme-tc-with-drawer-container"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`Layout should render layout without header 1`] = `
<div
  className="tc-layout theme-layout"
  id={undefined}
>
  <div
    className="tc-layout-one-column theme-main"
  >
    <div
      className="theme-tc-with-drawer"
    >
      <div
        style={
          Object {
            "display": "flex",
            "flexDirection": "column",
            "height": "100%",
            "overflow": "auto",
          }
        }
      >
        <h1>
          Column one
        </h1>
      </div>
      <div
        className="theme-tc-with-drawer-container"
      />
    </div>
  </div>
</div>
`;
